[package]
name = "sqrtx"
version = "0.1.6"
edition = "2021"
description = "Square root calculation"
license = "MIT"
repository = "https://github.com/MarioHabor/sqrtx"

[dependencies]
anyhow = "1.0.94"
futures = "0.3.31"
rayon = "1.10.0"
thiserror = "2.0.12"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
